# telegram-notifications

./: .gitignore  README.md  pyproject.toml
plugins/: aboba.py
src/: config.py  logger.py  main.py  notifier.py
src/database/: __init__.py  interfaces.py  memory_sub_repo.py
src/models/: subscription.py
src/plugin_manager/: __init__.py  manager.py
src/routers/: router.py
