[tool.poetry]
name = "telefier"
version = "0.1.0"
description = "Notifications via telegram"
authors = ["leventium <leventium@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.core.dependencies]
aiogram = {version = "3.0.0rc2", allow-prereleases = true}
loguru = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
